fix: all cart endpoints return List, getCart never returns null, fix product mapper